# ddd-fastapi-orders

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  load_test_orders.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260126_0001_create_orders_table.py  20260127_0002_create_order_items_table.py
app/: main.py
app/application/ports/: event_publisher.py
app/application/use_cases/: cancel_order.py  confirm_order.py  create_order.py  get_order.py  list_orders.py
app/domain/: exceptions.py
app/domain/entities/: order.py  order_item.py
app/domain/repositories/: order_repository.py
app/domain/value_objects/: order_status.py
app/infrastructure/: config.py
app/infrastructure/database/: base.py  models.py
app/infrastructure/messaging/: rabbitmq_publisher.py
app/infrastructure/repositories/: sql_order_repository.py
app/presentation/api/: dependencies.py  routes.py  schemas.py
scripts/: docker-entrypoint.sh
tests/: conftest.py
tests/integration/api/: test_create_order_route.py  test_get_order_routes.py  test_health_route.py  test_order_state_routes.py
tests/integration/repository/: conftest.py  test_sql_order_repository.py
tests/mocks/: fake_event_publisher.py  fake_order_repository.py
tests/unit/application/: test_confirm_cancel.py  test_create_order.py  test_get_order.py  test_list_orders.py
tests/unit/domain/: test_order.py  test_order_state.py
